--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "chart.js": "^4.2.1",
     "chroma-js": "^2.4.2",
     "csv-parser": "^3.0.0",
     "eslint": "8.39.0",
@@ -23,6 +24,7 @@
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.1",
