--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.12.1",
+    "@mui/x-data-grid": "^6.2.1",
     "@types/chroma-js": "^2.4.0",
     "@types/leaflet": "^1.9.3",
     "@types/node": "18.15.13",
@@ -21,6 +25,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.0",
     "leaflet": "^1.9.3",
+    "material-table": "^2.0.3",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
